syntax = "proto3";

option java_multiple_files = true;
option java_package = "livedataservice.proto";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Simple {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc StreamHello(HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name and greeting.
message HelloRequest {
  string name = 1;
  string greeting = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
